# melee-env

./: .gitignore  MANIFEST.in  agents_example.py  agents_example_v2.py  setup.cfg
melee_env/: dconfig.py  env.py  env_v2.py  sam_utils.py  test.py
melee_env/act_space/: act_space_v1.py  act_space_v2.py  act_space_v3.py
melee_env/agents/: basic.py  puff_bot.py  util.py
melee_env/frame_data/: jumpsquat.py
melee_env/gamestate_to_obs/: gamestate_to_obs_v1.py  gamestate_to_obs_v2.py  gamestate_to_obs_v3.py
melee_env/install_data/: GALE01r2.ini  GCPadNew.ini
melee_env/logical_inputs/: logical_inputs_v1.py  logical_inputs_v2.py  logical_inputs_v3.py
melee_env/logical_to_libmelee_inputs/: logical_to_libmelee_inputs_v1.py  logical_to_libmelee_inputs_v2.py  logical_to_libmelee_inputs_v3.py
melee_env/obs_space/: obs_space_v1.py  obs_space_v2.py  obs_space_v3.py
melee_env/raw_to_logical_inputs/: raw_to_logical_inputs_v1.py  raw_to_logical_inputs_v2.py  raw_to_logical_inputs_v3.py
melee_env/rewards/: rewards_v3.py
