[metadata]
name = melee-env
version = 0.69.0
author = Sam LM
author_email = sam.lac.mois@pm.me
description = Gymnasium melee env
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidtjones/melee-env
project_urls =
    Bug Tracker = https://github.com/davidtjones/melee-env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = 
    melee_env
    melee_env.agents
    melee_env.gamestate_to_obs
    melee_env.logical_inputs
    melee_env.logical_to_libmelee_inputs
    melee_env.raw_to_logical_inputs
python_requires = >=3.6
install_requires=
    melee @ git+https://github.com/geranim0/libmelee.git
    requests >= 2.20
    tqdm >= 4.14
include_package_data = True
